error.txt
11.c: In function ‘main’:
11.c:3:2: error: expected ‘;’ at end of input
  printf("helloooo world\n")
  ^
11.c:3:2: error: expected declaration or statement at end of input
